@@ -3,6 +3,8 @@ ags (2.0.35)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* added ags_add_audio_test.c
 	* added ags_add_audio_signal_test.c
+	* added ags_add_effect_test.c
+	* added ags_add_note_test.c
 
 ags (2.0.34)
 
